# OpenSHC

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  FunctionResolver.h  FunctionTest.h  IMPLEMENTATION_CHEAT_SHEET.md  LINUX-DEV-TEST  OpenSHC.cpp  README.md  RetroTemplate.h  SHC_3BB0A8C1_STATUS.txt  StrongholdCrusader.cpp  StructResolver.h  StructTest.h  ViewportRenderState.cpp  ViewportRenderState.func.h  ViewportRenderState.h  ViewportRenderStateStruct.h  ViewportState.h  build.bat  cmakew.bat  common.h  common.hpp  compare.bat  convert.py  convert3.py  create-include-lists.cmake  pch.h  reccmp-build.yml  reccmp-project.yml  reccmp-user.yml  requirements.txt  softlink.bat  windowslib.cpp  windowslib.h  (+1 more)
.agents/skills/attempt-bytecode-matching-dll/: SKILL.md
.agents/skills/clean-decomp-body/: SKILL.md
.agents/skills/enable-local-function-dev/: SKILL.md
.agents/skills/openshc-attempt-bytecode-matching-dll/: SKILL.md
.agents/skills/openshc-clean-decomp-body/: SKILL.md
.agents/skills/openshc-find-function-implementation/: SKILL.md
.agents/skills/openshc-setup-function/: SKILL.md
.github/workflows/: cpp-liner.yml  cpp-linter.yml  docs.yml
Addresses/: addresses.h
VisualStudioProject/: VisualStudioProject.sln  VisualStudioProject.vcxproj
cmake/: core-sources.cmake  core-sources.txt  openshc-sources.txt  pklib-sources.cmake  pklib-sources.txt  precomp-headers.cmake  ucp-definition.cmake  ucp-definition.txt
dependencies/DXSDK_Aug2007/: README.md
dependencies/DXSDK_Aug2007/include/: dplobby.h
dependencies/recreated/: README.md
dependencies/recreated/include/: Mss32.h  binkw32.h  shfolder.h
dependencies/recreated/lib/: Mss32.lib  binkw32.lib  shfolder.lib
dependencies/ucp3/lib/: ucp3.lib
docs/: about.rst  conf.py  contributing-workflow.md  contributing.rst  faq.rst  get_started.rst  index.rst  wiki-approach.rst  wiki.rst
docs/archive/: Design.md  contributing-workflow.md
docs/wiki/: approach.rst  load-balancing-table.md  technical-information.md  wiki-workings.md  workings.md
docs/wiki/tutorials/: reimplementation-tutorial-0-linux.md  reimplementation-tutorial-0.md  reimplementation-tutorial-1.md  reimplementation-tutorial-2.md  reimplementation-tutorial-3.md  reimplementation-tutorial-4.md  reimplementation-tutorial-addendum-1.md
mcp/: decomphelper.py
reccmp/: .gitignore  reccmp-build.yml  reccmp-project.yml  reccmp-user.yml  requirements.txt  run.bat
reccmp/dll/: reccmp-build.yml  reccmp-project.yml  reccmp-user.yml  run.bat  setup.bat
reccmp/exe/: reccmp-build.yml  run.bat
src/: FunctionResolver.h  MainImplementation.cpp  MainResolver.h  README.md  Resolver.cpp  StrongholdCrusader.cpp  StructResolver.h  StructTest.h  ViewportRenderState.func.h  common.h  entry.cpp  windowslib.h
src/OpenSHC/: Audio.func.hpp  Audio.hpp  Commands.func.hpp  Commands.hpp  Game.func.hpp  Game.hpp  Global.func.hpp  Global.hpp  IO.func.hpp  IO.hpp  Input.func.hpp  Input.hpp  Map.func.hpp  Map.hpp  Meta.func.hpp  Meta.hpp  OS.func.hpp  OS.hpp  Rendering.func.hpp  Rendering.hpp  Synchrony.func.hpp  Synchrony.hpp  UI.func.hpp  UI.hpp  string-literals.hpp
src/OpenSHC/AI/: AIAttackWaveTarget.hpp  AIAttackWaveTargetInt.hpp  AICState.func.hpp  AICState.hpp  AIGridComputationResourceType.hpp  AIGridComputationResourceTypeInt.hpp  AIMapExtraInfo.hpp  AINervousDestroyBuildingCategory.hpp  AINervousDestroyBuildingCategoryInt.hpp  AIRecruitUnitChoice.hpp  AIRecruitUnitChoiceInt.hpp  AISiegeUnitCreation.hpp  AIStrengthType.hpp  AIStrengthTypeInt.hpp  AIType.hpp  AITypeA.hpp  AITypeAByte.hpp  AITypeB.hpp  AITypeBByte.hpp  AITypeInt.hpp  AIUnitBehaviourType.hpp  AIUnitBehaviourTypeInt.hpp  AIVBuildingStep.hpp  AIVBuildingStepStatus.hpp  AIVBuildingStepStatusByte.hpp  AIVBuildingType.hpp  AIVBuildingTypeShort.hpp  AIVState.func.hpp  AIVState.hpp  AIVUnitType.hpp  AIVUnitTypeIndexMapping1.hpp  AIVUnitTypeIndexMapping1Int.hpp  AIVUnitTypeInt.hpp  TileDistancePair.hpp
src/OpenSHC/Audio/: MissingResourceState.func.hpp  MissingResourceState.hpp  MusicControl.hpp  SFX.func.hpp  SFX.hpp  SoundEffectsHelperData1.hpp  mss.func.hpp  mss.hpp
src/OpenSHC/Commands/: CommandBuildingType.hpp  CommandBuildingTypeInt.hpp  CommandBuildingTypeShort.hpp  GameCommand.hpp  GameCommandParameterLocation.hpp  GameCommandParameterLocationInt.hpp  GameCommandParameterReadWrite.hpp  GameCommandParameterReadWriteInt.hpp  GameCommandScheduling.hpp  GameCommandSchedulingInt.hpp  GameCommandState.hpp  GameCommandStateByte.hpp  GameCommandType.hpp  GameCommandTypeInt.hpp
src/OpenSHC/Common/: MapperCommandUnion.hpp  TruncatedInt.hpp
src/OpenSHC/Coordinates/: XYPairShort.hpp
src/OpenSHC/DirectDraw/: ColorPixelFormat.hpp  ColorPixelFormatInt.hpp  (+10 more)
src/core/: CompileMacros.h  MacroApproachTest.cpp  MacroApproachTest.h  MainDeclaration.h  MainImplementation.cpp  MainResolver.h  OpenSHC.hpp  Resolver.cpp  StructResolver.h  StructTest.h  TypeUtility.h  ViewportRenderState.2.cpp  ViewportRenderState.cpp  ViewportRenderState.func.h  ViewportRenderState.h  ViewportRenderStateStruct.h  ViewportState.h  entry.cpp  windowslib.cpp  windowslib.h
src/original/: README.md
src/precomp/: .gitignore  FunctionResolver.h  OStreamOverloads.hpp  StructResolver.h  TypeUtility.h  addresses-SHC-3BB0A8C1.hpp  common.hpp  constants-SHC-3BB0A8C1.hpp  cpp.hint  pch.h
src/reimplementation/: README.md
src/symbols/: data.asm  game.asm
status/: addresses-SHC-3BB0A8C1.txt  extract_header_and_update.py
tools/cpp-control/: Add-All-Reimplementations-To-Cmake.ps1  Compute-Progress.ps1
tools/import/: README.md  ghidra-importer.py  reimport-ghidra.ps1  requirements.txt
tools/mcp/: README.md  decomphelper.py
tools/reimplementation-control/: Enable-Reimplemented-Functions.ps1
tools/reimplementation-helper/: Get-Function-Data.ps1  Setup-Function-Implementation.ps1
ucp/: definition.yml  init.lua  options.yml
ucp/locale/: description-en.md  en.yml
util/: assertion.h
util/interfacing/: GlobalReference.h  MemberFunctionPointerGenerator.h
(+1902 files in other folders)
